--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gulp-build",
-  "version": "0.5.2",
+  "version": "0.5.3",
   "description": "Build files for different environments by swapping in variables",
   "homepage": "https://github.com/tjeastmond/gulp-build",
   "main": "index.js",
@@ -12,6 +12,9 @@
     "email": "tj.eastmond@gmail.com",
     "url": "http://tjeastmond.com"
   },
+  "contributors": [
+    "Chris Mendis <chris.mendis@gmail.com> (https://github.com/chrismendis)"
+  ],
   "repository": {
     "type": "git",
     "url": "git://github.com/tjeastmond/gulp-build.git"
@@ -31,10 +34,12 @@
     "handlebars": "2.0.0-alpha.2"
   },
   "devDependencies": {
-    "gulp": "~3.4.0",
+    "gulp": "~3.5.6",
     "gulp-util": "~2.2.14",
-    "glob": "3.2.9",
     "mocha": "~1.15.1",
-    "should": "~2.1.1"
+    "should": "~2.1.1",
+    "gulp-jshint": "~1.5.3",
+    "jshint-stylish": "~0.1.5",
+    "gulp-mocha": "~0.4.1"
   }
 }
